# spt_operational_database

./: .gitignore  README.md  SConstruct  models.py  pyproject.toml  pytest.init  setup.py
alembic/opdb_asrd/: alembic.ini
alembic/opdb_asrd/alembic/versions/: 67030552fe73_update_to_0_0_6.py
alembic/opdb_lam/: db.cfg
alembic/opdb_lam/alembic/versions/: 3078fbf3ffdb_update_to_0_1_10.py  49c31cdcdefd_.py  60f6e707c30e_.py  6444ae35fa0e_.py  6e1955992eb7_lam_upgrade_2023_03_01.py  7c023d532f3c_add_sequence_group.py  8b95935b1eb9_first_schema_update_at_lam_as_of_16_.py  a025a0bfe560_.py  a4010ebbc09d_.py  a64afbc58d16_update_to_0_1_7.py  b3091cf93c60_update_to_0_1_4.py  c43ebb2b074d_fix_a_typo_20210701.py  c677f4b7827d_iic_sequence_id.py  d218ca946933_update_to_0_1_1.py  dc5b82266e56_add_iic_sequence_created_at_and_iic_.py  efa0e46d3dc9_fix_unique_constraints.py  efacacfa24d5_update_to_0_1_8.py  ff29cf5a1676_updates_for_playing_with_instrm_1110.py
alembic/opdb_summit/alembic/versions/: 06febe7976d8_add_timezone_awareness_to_be_observed_.py  102a149a18d6_add_sequence_group_table.py  17dc946014c1_updating_models_for_pfs_design_pfs_config.py  1a6070b36cbb_fix_for_instrm_2041.py  1cbebc1b27ea_added_pfs_config_converg_tolerance_.py  26a4e346fbf1_remove_redundant_unique_constraints.py  30384f37a7f3_test_3.py  304faca33092_update_to_0_1_6.py  306be143cb55_add_fiducial_tweaked_x_mm_and_fiducial_.py  308ade0f3929_update_to_0_0_4.py  319ff2529bc2_adding_pfs_config_sps_table.py  3822060eb2ca_fix_for_instrm_1955.py  3c79be472316_damd_173.py  40988b7668ba_add_pfs_config_fiber_pfi_nominal_final.py  431d0bb8a39d_update_to_0_1_9.py  44bb95de7b0b_update_to_0_1_0.py  486f6afc1e07_fix_instrm_1687.py  4b795e4f3a76_update_to_0_1_11.py  5170e0ba92c5_infra_351_pfs_config_agc_add_guide_star_.py  539e0541a4d3_update_to_0_0_3.py  583bc21c4e6f_test_2.py  5dadaac87b5b_add_inst_pa.py  61a27fbcbc90_update_to_0_0_5.py  68dcfec061dc_rename_pfs_config_pfi_nominal_final.py  69f7c10323f8_add_pfs_design_design0_and_pfs_design_.py  6f6938f65a2f_fix_instrm_1687_add_constraints.py  77d27b6d1431_add_proposal_id_and_ob_code.py  910c4ead6bc1_update_to_0_2_0.py  9a6d3c101e2c_iic_sequence_visit_set_id_sequence_id.py  9b65fd3a8478_fix_infra_335.py  b13b0e542938_add_iic_sequence_group_id.py  (+17 more)
alembic/qadb_ipmu/alembic/: env.py
alembic/test/alembic/: env.py
examples/test/: opdb_api_implementation_example.ipynb  pfs_design_config_example.ipynb  pfs_design_example.ipynb  test_insert_fetch_by_copy.ipynb
python/opdb/: manage.py  models.py  models_qadb.py  opdb.py  utils.py
python/opdb/obslog/: __init__.py  __main__.py
scripts/: opdb.py  pfs_sim_erun.py  simulation_mcs_erun_201908.ipynb
tests/: test_models.py  test_obslog.py
tests/secrets/: .gitignore  testdb.sample.url
(+10 files in other folders)
