[build-system]
requires = [
    "setuptools >= 77.0.3",
    "lsst-versions",
]
build-backend = "setuptools.build_meta"

[project]
name = "opdb"
description = "Subaru PFS Operational Database client and model definitions"
authors = [
    { name = "Subaru PFS ICS Team" },
    { name = "Kiyoto Yabe" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "pandas",
    "numpy",
    "astropy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
    "alembic",
]

[tool.setuptools.packages.find]
where = ["python/"]
include = ["opdb", "opdb.*"]

[tool.lsst_versions]
write_to = "python/opdb/version.py"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --ignore alembic"  # Recommended as best practice

[tool.ruff]
line-length = 110

# Ruff configuration to ignore naming capitalization/camelCase rules for functions, methods, and variables
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["N802", "N803", "N806", "N815", "N816", "EM101", "TRY003"]

[tool.pydocstyle]
convention = "numpy"

[tool.hatch.metadata]
allow-direct-references = true
